# JAIInferenceSystem

./: CMakeLists.txt  README.md
demo/: main.cpp
documents/: 项目记录.md
model_train/: resnet.py
shell/: demo_run.sh
src/config/: config.h
src/net/: JNet.cpp  JNet.h
